hphp/hack/test/typecheck/aktuple/vec_literal_error.php
<?hh

function test(): void {
  $a = vec[4, 'aaa'];

  take_string($a[0]);
}

function take_string(string $_): void {}
